<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="50dp">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:scaleType="fitXY"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/bannerxhdpi"
            />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/sign_up"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="#000000"
            android:textSize="26sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView3" />

        <EditText
            android:id="@+id/signUpName"
            android:layout_width="0dp"
            android:background="@drawable/textview"
            android:padding="10dp"
            android:layout_height="50dp"
            android:layout_marginTop="40dp"
            android:ems="10"
            android:hint="@string/user_name"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="@+id/textView2"
            app:layout_constraintStart_toStartOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <EditText
            android:id="@+id/signUpEmail"
            android:layout_width="0dp"
            android:background="@drawable/textview"
            android:padding="10dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:hint="@string/user_email"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="@+id/signUpName"
            app:layout_constraintStart_toStartOf="@+id/signUpName"
            app:layout_constraintTop_toBottomOf="@+id/signUpName" />

        <EditText
            android:id="@+id/signUpPassword"
            android:layout_width="0dp"
            android:background="@drawable/textview"
            android:padding="10dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:hint="@string/user_password"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="@+id/signUpEmail"
            app:layout_constraintStart_toStartOf="@+id/signUpEmail"
            app:layout_constraintTop_toBottomOf="@+id/signUpEmail" />

        <Button
            android:id="@+id/signUpButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@drawable/rounded_button"
            android:text="Sign Up"
            android:textColor="#fff"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="@+id/signUpPassword"
            app:layout_constraintStart_toStartOf="@+id/signUpPassword"
            app:layout_constraintTop_toBottomOf="@+id/signUpPassword" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="Already have an account?"
            android:textAlignment="textStart"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/signUpButton"
            app:layout_constraintTop_toBottomOf="@+id/signUpButton" />

        <TextView
            android:id="@+id/gotoLogin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/login"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@+id/signUpButton"
            app:layout_constraintStart_toEndOf="@+id/textView5"
            app:layout_constraintTop_toTopOf="@+id/textView5" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>